--- a/Thor.html
+++ b/Thor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
   
 <head>
-<title>Thor's Hammer</title>
+<title>Mjolnir</title>
 <meta http=eqiv"Content-Type :content="texl/html; charset=utf-8">
 <style type="text/css">
  a {text-decoration:none;}
